// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders with custom component 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "gap": "4px",
      "justifyContent": "start",
    }
  }
>
  <div
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    First
  </div>
  <div
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    Previous
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    2
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    3
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "blue",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "white",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    4
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    5
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    6
  </div>
  <div
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    Next
  </div>
  <div
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "1px solid black",
        "borderRadius": "5px",
        "color": "black",
        "cursor": "pointer",
        "padding": "10px",
      }
    }
  >
    Last
  </div>
</div>
`;

exports[`it renders without crashing 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "gap": 6,
    }
  }
>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "not-allowed",
        "padding": "4px 8px",
      }
    }
  >
    First
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "not-allowed",
        "padding": "4px 8px",
      }
    }
  >
    Previous
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "#123456",
        "color": "white",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    1
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    2
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    3
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    4
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    5
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    Next
  </div>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "",
        "color": "",
        "cursor": "pointer",
        "padding": "4px 8px",
      }
    }
  >
    Last
  </div>
</div>
`;
